tests/ui/impl-trait/unsized_coercion.next.stderr
error[E0271]: type mismatch resolving `hello::{opaque#0} normalizes-to _`
  --> $DIR/unsized_coercion.rs:14:17
   |
LL |         let x = hello();
   |                 ^^^^^^^ types differ

error[E0308]: mismatched types
  --> $DIR/unsized_coercion.rs:18:5
   |
LL | fn hello() -> Box<impl Trait> {
   |               ---------------
   |               |   |
   |               |   the expected opaque type
   |               expected `Box<impl Trait>` because of return type
...
LL |     Box::new(1u32)
   |     ^^^^^^^^^^^^^^ types differ
   |
   = note: expected struct `Box<impl Trait>`
              found struct `Box<u32>`

error[E0271]: type mismatch resolving `hello::{opaque#0} normalizes-to _`
  --> $DIR/unsized_coercion.rs:14:17
   |
LL |         let x = hello();
   |                 ^^^^^^^ types differ
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0271]: type mismatch resolving `hello::{opaque#0} normalizes-to _`
  --> $DIR/unsized_coercion.rs:12:1
   |
LL | fn hello() -> Box<impl Trait> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ types differ

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0271, E0308.
For more information about an error, try `rustc --explain E0271`.
